docs: update AUTHORS file
Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/AUTHORS
+++ b/AUTHORS
@@ -115,6 +115,7 @@ CONTRIBUTORS:
       François Revol <revol@free.fr>
       Fran Diéguez <frandieguez@ubuntu.com>
       Frédéric Bothamy <frederic.bothamy@free.fr>
+      Frederik \"Freso\" S. Olesen <freso@freso.dk>
       Gabor Kelemen <kelemeng@gnome.hu>
       Gabriel Barazer <gabriel@oxeva.fr>
       Gabriel Burt <gburt@novell.com>
@@ -206,6 +207,7 @@ CONTRIBUTORS:
       Milan Broz <mbroz@redhat.com>
       Moritz Muehlenhoff <jmm@inutil.org>
       M.S.Colclough <m.s.colclough@bham.ac.uk>
+      Natanael Copa <ncopa@alpinelinux.org>
       Nick Holloway <Nick.Holloway@pyrites.org.uk>
       Nicolas Provost <nprovost@quadriv.com>
       Nilgün Belma Bugüner <nilgun@buguner.name.tr>
