build-sys: cleanup BUILD_LOGIN_UTILS
Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/Documentation/TODO
+++ b/Documentation/TODO
@@ -150,6 +150,8 @@ login-utils:
 -----------
 
  - use err() and warn() macros rather than fprintf(stderr, ...)
+ - (!) merge newgrp from shadow-utils
+ - (!) enable login utils by default
 
 libblkid
 --------
