prlimit: add --{raw,noheadings} options
Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/sys-utils/prlimit.1
+++ b/sys-utils/prlimit.1
@@ -38,8 +38,12 @@ Define the output columns to use. If no output arrangement is specified, then a 
 Use \fB\-\-help\fP to  get list of all supported columns.
 .IP "\fB\-V, \-\-version\fP"
 Output version information and exit.
-.IP "\fB\-v, \-\-verbose\fP"
+.IP "\fB\-\-verbose\fP"
 Vebose mode.
+.IP "\fB\-\-raw\fP"
+Use the raw output format.
+.IP "\fB\-\-nohindings\fP"
+Do not print a header line.
 .IP "\fB\-h, \-\-help\fP"
 Print a help text and exit.
 
