--- a/login-utils/login.1
+++ b/login-utils/login.1
@@ -149,8 +149,8 @@ Max time in seconds for login. The default value is 60.
 .PP
 \fBFAIL_DELAY\fR (number)
 .RS 4
-Delay in seconds before being allowed another attempt after a login failure.
-The default value is 5.
+Delay in seconds before being allowed another three tries after a login
+failure. The default value is 5.
 .RE
 .PP
 \fBTTYPERM\fR (string)
