prlimit: fix noheadings option in man page
Signed-off-by: Bernhard Voelker <mail@bernhard-voelker.de>

--- a/sys-utils/prlimit.1
+++ b/sys-utils/prlimit.1
@@ -42,7 +42,7 @@ Output version information and exit.
 Vebose mode.
 .IP "\fB\-\-raw\fP"
 Use the raw output format.
-.IP "\fB\-\-nohindings\fP"
+.IP "\fB\-\-noheadings\fP"
 Do not print a header line.
 .IP "\fB\-h, \-\-help\fP"
 Print a help text and exit.
