login: add version printing option
Signed-off-by: Sami Kerola <kerolasa@iki.fi>

--- a/login-utils/login.1
+++ b/login-utils/login.1
@@ -122,6 +122,9 @@ Used by other servers (i.e.,
 to tell
 .B login
 that printing the hostname should be suppressed in the login: prompt.
+.TP
+.B \-V
+Print version and exit.
 
 .SH CONFIG FILE ITEMS
 .B login
