prlimit: fix typo in man page, option --verbose
Signed-off-by: Bernhard Voelker <mail@bernhard-voelker.de>

--- a/sys-utils/prlimit.1
+++ b/sys-utils/prlimit.1
@@ -39,7 +39,7 @@ Use \fB\-\-help\fP to  get list of all supported columns.
 .IP "\fB\-V, \-\-version\fP"
 Output version information and exit.
 .IP "\fB\-\-verbose\fP"
-Vebose mode.
+Verbose mode.
 .IP "\fB\-\-raw\fP"
 Use the raw output format.
 .IP "\fB\-\-noheadings\fP"
