--- a/misc-utils/findmnt.8
+++ b/misc-utils/findmnt.8
@@ -89,9 +89,9 @@ options are cumulative in effect.  It is different from
 .B \-t
 in that each option is matched exactly; a leading
 .I no
-at the beginning
-of one option does not negate the rest.  For more details see
-.BR mount (8).
+at the beginning does not have global meaning. The "no" could used for
+individual items in the list. The "no" prefix interpratation could be disabled
+by "+" prefix.
 .IP "\fB\-o, \-\-output \fIlist\fP"
 Define output columns.  Currently supported are
 .BR ACTION,
