docs: add info about virt-what to TODO
Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/Documentation/TODO
+++ b/Documentation/TODO
@@ -1,6 +1,11 @@
 
  Note that items with (!) have high priority.
 
+lscpu
+-----
+  - detect more hypervisors, see 'virt-what' shell script
+    http://people.redhat.com/~rjones/virt-what/
+
 dmesg
 -----
 
