--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,7 @@
+util-linux 2.21-rc1: Jan 18 2012
+* see Documentation/releases/v2.21-ReleaseNotes or complete changelog at
+  ftp://ftp.kernel.org/pub/linux/utils/util-linux/v2.21/v2.21-rc1-ChangeLog
+
 util-linux 2.20: Aug 29 2011
 * see docs/v2.20-ReleaseNotes or complete changelog at
   ftp://ftp.kernel.org/pub/linux/utils/util-linux/v2.20/v2.20-ChangeLog
