--- a/misc-utils/findmnt.8
+++ b/misc-utils/findmnt.8
@@ -22,7 +22,6 @@ will list all mounted filesytems or search for a filesystem.  The
 .B findmnt
 command is able to search in
 .IR /etc/fstab ,
-.IR /etc/fstab.d ,
 .IR /etc/mtab
 or
 .IR /proc/self/mountinfo .
@@ -38,9 +37,7 @@ The command prints all mounted filesystems in the tree-like format by default.
 Print help and exit.
 .IP "\fB\-s, \-\-fstab\fP"
 Search in
-.IR /etc/fstab
-and
-.IR /etc/fstab.d .
+.IR /etc/fstab .
 The output is in the list format (see --list).
 .IP "\fB\-m, \-\-mtab\fP"
 Search in
